jenkins-deployment.yaml
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: jenkins  
spec:  
  replicas: 1  
  strategy:  
    type: RollingUpdate  
    rollingUpdate:  
      maxSurge: 2  
      maxUnavailable: 0  
  template:  
    metadata:  
      labels:  
        app: jenkins  
    spec:  
      containers:  
      - name: jenkins  
        image: jenkins 
        imagePullPolicy: IfNotPresent  
        ports:  
        - containerPort: 8080  
          name: web  
          protocol: TCP
        - containerPort: 50000  
          name: agent  
          protocol: TCP
        volumeMounts:  
        - name: jenkinshome  
          mountPath: /var/jenkins_home  
      volumes:  
      - name: jenkinshome  
        nfs:  
          server: 10.10.10.10  
          path: "/opt/jenkins"
