jenkinsslave-deployment.yaml
apiVersion: extensions/v1beta1  
kind: Deployment  
metadata:  
  name: centos721511jenkinsslave
spec:  
  replicas: 1  
  strategy:  
    type: RollingUpdate  
    rollingUpdate:  
      maxSurge: 2  
      maxUnavailable: 0  
  template:  
    metadata:  
      labels:  
        app: centos721511jenkinsslave  
    spec:  
      containers:  
      - name: centos721511jenkinsslave  
        image: xiechuan/centos721511jenkinsslave:1.0.0
        imagePullPolicy: IfNotPresent  
        ports:  
        - containerPort: 8080  
          name: tomcat 
          protocol: TCP
