jenkins-service.yaml
kind: Service  
apiVersion: v1  
metadata:  
  labels:  
      app: jenkins  
  name: jenkins  
spec:  
  type: NodePort
  ports:  
  - port: 8080  
    targetPort: 8080
    nodePort: 30080
    name: web  
  - port: 50000  
    targetPort: 50000
    nodePort: 50000  
    name: agent  
  selector:  
    app: jenkins
