jenkinsslave-service.yaml
kind: Service  
apiVersion: v1  
metadata:  
  labels:  
      app: ibis1 
  name: ibis1
spec:  
  ports:  
  - port: 8080  
    targetPort: 8080 
    nodePort: 40001
    name: tomcat  
  - port: 8082
    targetPort: 8082
    nodePort: 40002
    name: socket
  type: NodePort
  selector:  
    app: ibis1
