jenkins-ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: jenkins  
spec:  
  rules:  
  - host: jenkins.xxx.lan  
    http:  
      paths:  
      - path: /  
        backend:  
          serviceName: jenkins  
          servicePort: 8080
